--- a/Assignment/Assignment 1.ipynb
+++ b/Assignment/Assignment 1.ipynb
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3ab85115",
+   "id": "203e8d79",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d377ed92",
+   "id": "7fd0d633",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b37bce24",
+   "id": "40a6af7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2a078137",
+   "id": "df7258a8",
    "metadata": {},
    "outputs": [
     {
@@ -203,6 +203,66 @@
    ],
    "source": [
     "# Printing out the dictionary\n",
+    "dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "33a159e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{' ': 0.148,\n",
+       " ',': 0.017,\n",
+       " '.': 0.019,\n",
+       " 'A': 0.003,\n",
+       " 'D': 0.002,\n",
+       " 'F': 0.001,\n",
+       " 'I': 0.001,\n",
+       " 'L': 0.001,\n",
+       " 'M': 0.002,\n",
+       " 'N': 0.005,\n",
+       " 'P': 0.001,\n",
+       " 'Q': 0.001,\n",
+       " 'S': 0.001,\n",
+       " 'U': 0.001,\n",
+       " 'V': 0.001,\n",
+       " 'a': 0.068,\n",
+       " 'b': 0.007,\n",
+       " 'c': 0.033,\n",
+       " 'd': 0.025,\n",
+       " 'e': 0.099,\n",
+       " 'f': 0.004,\n",
+       " 'g': 0.012,\n",
+       " 'h': 0.002,\n",
+       " 'i': 0.087,\n",
+       " 'l': 0.04,\n",
+       " 'm': 0.044,\n",
+       " 'n': 0.051,\n",
+       " 'o': 0.03,\n",
+       " 'p': 0.017,\n",
+       " 'q': 0.014,\n",
+       " 'r': 0.042,\n",
+       " 's': 0.065,\n",
+       " 't': 0.067,\n",
+       " 'u': 0.074,\n",
+       " 'v': 0.01,\n",
+       " 'x': 0.004}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Processing a final output: finding probability of each character\n",
+    "for elem in dictionary:\n",
+    "    dictionary[elem] = round(dictionary[elem]/len(txt), 3)\n",
+    "\n",
     "dictionary"
    ]
   }
