Third Task Solution(by Angsar)

--- a/Assignment/Assignment3.ipynb
+++ b/Assignment/Assignment3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "24cb178d",
+   "id": "c93116e1",
    "metadata": {},
    "source": [
     "## Assignment 3"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2bddadb5",
+   "id": "660206dc",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e21aa9d8",
+   "id": "b3fca67c",
    "metadata": {},
    "source": [
     "# Output 1"
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "60855bef",
+   "id": "5f0d7288",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67c00b53",
+   "id": "8b61d669",
    "metadata": {},
    "source": [
     "## Output 2"
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1d4e9349",
+   "id": "e7964318",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6b44abc2",
+   "id": "2bf37635",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f936ba97",
+   "id": "723fcfe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8365e635",
+   "id": "047cac14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ddf21f68",
+   "id": "e081101c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "543d9747",
+   "id": "6c062a96",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bb3d47d2",
+   "id": "e6e25dd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d01fe730",
+   "id": "f97a8491",
    "metadata": {},
    "outputs": [
     {
@@ -524,9 +524,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "af2f35eb",
+   "metadata": {},
+   "source": [
+    "## Output 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "efdc1d27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "' ' - 0.162 - 11010\n",
+      "'a' - 0.081 - 11000\n",
+      "'i' - 0.081 - 11001\n",
+      "'e' - 0.064 - 10111\n",
+      "'o' - 0.058 - 10101\n",
+      "'r' - 0.058 - 10110\n",
+      "'n' - 0.052 - 10011\n",
+      "'t' - 0.052 - 10100\n",
+      "'l' - 0.04 - 10001\n",
+      "'s' - 0.04 - 10010\n",
+      "'c' - 0.035 - 10000\n",
+      "'d' - 0.023 - 01111\n",
+      "'0' - 0.017 - 01000\n",
+      "'C' - 0.017 - 01001\n",
+      "'f' - 0.017 - 01010\n",
+      "'g' - 0.017 - 01011\n",
+      "'m' - 0.017 - 01100\n",
+      "'p' - 0.017 - 01101\n",
+      "'y' - 0.017 - 01110\n",
+      "',' - 0.012 - 00011\n",
+      "'.' - 0.012 - 00100\n",
+      "'L' - 0.012 - 00101\n",
+      "'h' - 0.012 - 00110\n",
+      "'k' - 0.012 - 00111\n",
+      "'-' - 0.006 - 110110\n",
+      "'2' - 0.006 - 110111\n",
+      "'4' - 0.006 - 111000\n",
+      "'5' - 0.006 - 111001\n",
+      "'B' - 0.006 - 111010\n",
+      "'H' - 0.006 - 111011\n",
+      "'I' - 0.006 - 111100\n",
+      "'M' - 0.006 - 111101\n",
+      "'R' - 0.006 - 111110\n",
+      "'S' - 0.006 - 111111\n",
+      "'V' - 0.006 - 00000\n",
+      "'u' - 0.006 - 00001\n",
+      "'v' - 0.006 - 00010\n"
+     ]
+    }
+   ],
+   "source": [
+    "output3 = dict(sorted(output3.items(), key=lambda x: x[1], reverse = True))\n",
+    "output3\n",
+    "for x in output3:\n",
+    "    print(\"'\" + x + \"' - \" + str(output3[x]) + \" - \" + df.loc[x][\"bytecode\"])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2c2cd7f",
+   "id": "1345c628",
    "metadata": {},
    "outputs": [],
    "source": []
