Fourth Task solution(by Renat)

--- a/Assignment/Assignment3.ipynb
+++ b/Assignment/Assignment3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c93116e1",
+   "id": "aaeaa488",
    "metadata": {},
    "source": [
     "## Assignment 3"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "660206dc",
+   "id": "8fdca5f5",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3fca67c",
+   "id": "9c48b68d",
    "metadata": {},
    "source": [
     "# Output 1"
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5f0d7288",
+   "id": "68e0b46d",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b61d669",
+   "id": "eb80b6e9",
    "metadata": {},
    "source": [
     "## Output 2"
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e7964318",
+   "id": "f93b5da8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2bf37635",
+   "id": "a086236f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "723fcfe2",
+   "id": "10fec22c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "047cac14",
+   "id": "a2bd638e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e081101c",
+   "id": "e7a22d7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6c062a96",
+   "id": "45a0da36",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e6e25dd8",
+   "id": "1f66a459",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f97a8491",
+   "id": "58699c11",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af2f35eb",
+   "id": "3c142fe1",
    "metadata": {},
    "source": [
     "## Output 3"
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "efdc1d27",
+   "id": "8b88394a",
    "metadata": {},
    "outputs": [
     {
@@ -589,12 +589,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f8d1de55",
+   "metadata": {},
+   "source": [
+    "## Output 4"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1345c628",
+   "execution_count": 33,
+   "id": "95d4c90c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new = ''\n",
+    "for char in txt:\n",
+    "    new = new + df.loc[char][\"bytecode\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7dca02d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "875"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open(\"new.txt\", \"a\")\n",
+    "f.write(new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f1fc5e82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function TextIOWrapper.close()>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.close"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "fabc7261",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open(\"new.txt\", \"r\")\n",
+    "newtxt = f.read()\n",
+    "newtxt"
+   ]
   }
  ],
  "metadata": {
