Fifth Task Solution

--- a/Assignment/Assignment3.ipynb
+++ b/Assignment/Assignment3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b832cc85",
+   "id": "401719d4",
    "metadata": {},
    "source": [
     "## Assignment 3"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "04c58640",
+   "id": "491c5fe0",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfc02b88",
+   "id": "f498ed24",
    "metadata": {},
    "source": [
     "# Output 1"
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1cbae69b",
+   "id": "fe2bdb1f",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2031ec99",
+   "id": "5c6c20f3",
    "metadata": {},
    "source": [
     "## Output 2"
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "abce9250",
+   "id": "e02343fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4cb15ab9",
+   "id": "389b7fa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2908c5c1",
+   "id": "22de7cb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ed5a9161",
+   "id": "5f3d534e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ee41d9cb",
+   "id": "14d2b671",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "60803d92",
+   "id": "457c5c9b",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "33836183",
+   "id": "6b08a9ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1beed737",
+   "id": "3de37f4a",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81434cdd",
+   "id": "e6e8a53e",
    "metadata": {},
    "source": [
     "## Output 3"
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1257e5e3",
+   "id": "56fa1992",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbb81bc9",
+   "id": "ea7cf090",
    "metadata": {},
    "source": [
     "## Output 4"
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "3a45e990",
+   "id": "b6f1ab0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "b5ada050",
+   "id": "9de7b00a",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "0565e6e7",
+   "id": "2a1e0572",
    "metadata": {},
    "outputs": [
     {
@@ -652,6 +652,43 @@
     "f = open(\"new.txt\", \"r\")\n",
     "newtxt = f.read()\n",
     "newtxt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8fec709",
+   "metadata": {},
+   "source": [
+    "## Output 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "2ded2292",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of bits in the original text: 1384\n",
+      "Number of bits in the original text: 875\n",
+      "Compression ratio: 1.582\n",
+      "Average code length: 5.075 bits/symbol\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of bits in the original text: \" + str(len(txt)*8))\n",
+    "print(\"Number of bits in the original text: \" + str(len(newtxt)))\n",
+    "print(\"Compression ratio: \" + str(round(len(txt)*8/len(newtxt), 3)))\n",
+    "\n",
+    "df[\"code_len\"] = df[\"bytecode\"].apply(lambda x: len(x))\n",
+    "\n",
+    "df[\"col\"] = df[\"probability\"]*df[\"code_len\"]\n",
+    "\n",
+    "print(\"Average code length: \" + str(round(sum(df[df[\"left_child\"]=='None'][\"col\"]), 3)) + \" bits/symbol\")"
    ]
   }
  ],
